add package requests

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ django
 django-cors-headers
 django_jinja 
 djangorestframework
+django-oauth-toolkit
 mysqlclient
+requests
 sqlalchemy
 sorl-thumbnail
-oauth2_provider
